experiments; some spacing issues resolved

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
+/* .h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+} */
+
 .jumbotron-with-bg-image{
     background-image: url('https://specials-images.forbesimg.com/imageserve/5d07abec34a5c400084894e0/960x0.jpg?fit=scale');
     background-size: cover;
     background-repeat: no-repeat;
+    /*border:0;*/
    }
+
+/* .navbar-dark {
+    padding-top: -25%;
+} */
 
    div.carousel{
     width: 80%; /* for example */
